--- a/proyectoIntegrador_LG/src/app/components/social/social.component.html
+++ b/proyectoIntegrador_LG/src/app/components/social/social.component.html
@@ -1,1 +1,7 @@
-<p>social works!</p>
+<div>
+    <a href=""><img src="../../../assets/linkedin.png" id="linkedin"></a>
+    <a href=""><img src="../../../assets/github.png" id="Github"></a>
+    <a href=""><img src="../../../assets/instagram.png" id="Instagram"></a>
+    <a href=""><img src="../../../assets/twitter.png" id="Twitter"></a>
+    <a href=""><img src="../../../assets/facebook.png" id="facebook"></a>
+</div>
