--- a/proyectoIntegrador_LG/src/app/components/experiencia/experiencia.component.html
+++ b/proyectoIntegrador_LG/src/app/components/experiencia/experiencia.component.html
@@ -1,1 +1,33 @@
-<p>experiencia works!</p>
+<div class="row">
+    <h1>Experiencia laboral</h1>
+    <div class="col-lg-11>">
+<ul>
+    <li><h1>Trabajo 1</h1>-<h3>(years)</h3></li>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Natus, veniam saepe. Consectetur quas placeat, ducimus ratione
+        dolorem fugiat doloremque tempore dolore in delectus aut numquam 
+        magni eum aspernatur similique iure.</p>
+</ul>
+<ul>
+    <li><h1>Trabajo 2</h1>-<h3>(years)</h3></li>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Natus, veniam saepe. Consectetur quas placeat, ducimus ratione
+        dolorem fugiat doloremque tempore dolore in delectus aut numquam 
+        magni eum aspernatur similique iure.</p>
+</ul>
+<ul>
+    <li><h1>Trabajo 3</h1>-<h3>(years)</h3></li>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Natus, veniam saepe. Consectetur quas placeat, ducimus ratione
+        dolorem fugiat doloremque tempore dolore in delectus aut numquam 
+        magni eum aspernatur similique iure.</p>
+</ul>
+<ul>
+    <li><h1>Trabajo 4</h1>-<h3>(years)</h3></li>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Natus, veniam saepe. Consectetur quas placeat, ducimus ratione
+        dolorem fugiat doloremque tempore dolore in delectus aut numquam 
+        magni eum aspernatur similique iure.</p>
+</ul>
+    </div>
+</div>
