--- a/proyectoIntegrador_LG/src/app/app.component.html
+++ b/proyectoIntegrador_LG/src/app/app.component.html
@@ -2,4 +2,6 @@
 <app-header></app-header>
 <app-acerca-de></app-acerca-de>
 <app-experiencia></app-experiencia>
+<app-educacion></app-educacion>
+<app-hys></app-hys>
 </div>
