--- a/proyectoIntegrador_LG/src/app/components/educacion/educacion.component.html
+++ b/proyectoIntegrador_LG/src/app/components/educacion/educacion.component.html
@@ -3,25 +3,24 @@
     <div class="col-lg-1"></div>
     <div class="col-lg-11>">
 <ul>
-    <li><h1>Estudio 1</h1>-<h3>(years)</h3></li>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Natus, veniam saepe. Consectetur quas placeat, ducimus ratione
-        dolorem fugiat doloremque tempore dolore in delectus aut numquam 
-        magni eum aspernatur similique iure.</p>
+    <li><h1>Licenciatura en comunicación social orientación periodismo</h1>-<h3>2015-en curso</h3></li>
+    <p>Estudiante avanzada en proceso de realización de TIF.
+        UNLP
+    </p>
 </ul>
 <ul>
-    <li><h1>Estudio 2</h1>-<h3>(years)</h3></li>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Natus, veniam saepe. Consectetur quas placeat, ducimus ratione
-        dolorem fugiat doloremque tempore dolore in delectus aut numquam 
-        magni eum aspernatur similique iure.</p>
+    <li><h1>Profesorado en comunicación social</h1>-<h3>2018- en curso</h3></li>
+    <p>Estudiante avanzada.
+        UNLP
+    </p>
 </ul>
 <ul>
-    <li><h1>Estudio 3</h1>-<h3>(years)</h3></li>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Natus, veniam saepe. Consectetur quas placeat, ducimus ratione
-        dolorem fugiat doloremque tempore dolore in delectus aut numquam 
-        magni eum aspernatur similique iure.</p>
+    <li><h1>Licenciatura en artes de la escritura</h1>-<h3>2017-2020</h3></li>
+    <p>UNA</p>
+</ul>
+<ul>
+    <li><h1>Argentina Programa</h1>-<h3>2021-2022</h3></li>
+    <p>Programación full stack jr.</p>
 </ul>
     </div>
 </div>
