--- a/proyectoIntegrador_LG/src/app/components/proyecto/proyecto.component.css
+++ b/proyectoIntegrador_LG/src/app/components/proyecto/proyecto.component.css
@@ -1,10 +1,15 @@
 .row{
     padding: 20px;
-}
-div{
     background-color: pink;
 }
-h1, h3, .tittle{
+.contenedor{
+    width: auto;
+}
+.parte1, .parte2{
+    display: inline-block;
+    text-align: justify;
+}
+h1{
     display: inline;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     font-size: large;
@@ -13,4 +18,7 @@ h1, h3, .tittle{
 p{
     font-family: 'Courier New', Courier, monospace;
     font-size: medium;
+}
+.img-proyecto{
+    float: right;
 }
