--- a/proyectoIntegrador_LG/src/app/components/hys/hys.component.css
+++ b/proyectoIntegrador_LG/src/app/components/hys/hys.component.css
@@ -2,3 +2,9 @@
     background-color: pink;
     padding: 20px;
 }
+h1{
+    display: inline;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: large;
+    font-weight: bold;
+}
