--- a/proyectoIntegrador_LG/src/app/app.component.html
+++ b/proyectoIntegrador_LG/src/app/app.component.html
@@ -1,9 +1,12 @@
 <div>
-<app-header></app-header>
-<app-acerca-de></app-acerca-de>
-<app-experiencia></app-experiencia>
-<app-educacion></app-educacion>
-<app-hys></app-hys>
-<app-proyecto></app-proyecto>
-<app-footer></app-footer>
+    <app-acerca-de></app-acerca-de>
+    <app-banner></app-banner>
+    <app-header></app-header>
+    <app-educacion></app-educacion>
+    <app-experiencia></app-experiencia>
+    <app-footer></app-footer>
+    <app-hys></app-hys>
+    <app-logo-ap></app-logo-ap>
+    <app-proyecto></app-proyecto>
+    <app-root></app-root>
 </div>
