--- a/proyectoIntegrador_LG/src/app/components/header/header.component.css
+++ b/proyectoIntegrador_LG/src/app/components/header/header.component.css
@@ -1,7 +1,11 @@
 div{
     background-color: dodgerblue;
 }
-app-social{
-    float: right;
+
+#logoAP{
+    float: left;
     margin-top: 50pxs;
+}
+.redes{
+    float: right;
 }
