--- a/proyectoIntegrador_LG/src/app/components/proyecto/proyecto.component.html
+++ b/proyectoIntegrador_LG/src/app/components/proyecto/proyecto.component.html
@@ -2,11 +2,24 @@
     <h1>Proyectos realizados</h1>
     <div class="contenedor">
         <div class="col-sm-12 col-md-7 col-lg-7 parte1">
-            <h1>Coronadas de gloria</h1>
-            <p>Proyecto de magazine radial de la última tarde (18 a 20hs) que tuvo como objetivo construir sentidos en torno a lo local en la ciudad de La Plata, provincia de Buenos Aires, lo cultural y lo político desde una perspectiva de género.
+            <ul>
+                <li><h1>Coronadas de gloria</h1></li>
+            <p>Proyecto de magazine radial de la última tarde (18 a 20hs) que tuvo como objetivo construir sentidos en torno a lo local 
+                en la ciudad de La Plata, provincia de Buenos Aires, lo cultural y lo político desde una perspectiva de género.
                 Fue transmitido por la radio de la Facultad de periodismo y comunicación social de la UNLP durante el 2019 y el 2020.</p>
-        <div class="col-sm-12 col-md-3 col-lg-3 parte2">
-            <img src="../../../assets/logo_CORONADAS DE GLORIA_2_3.png" class="img-fluid img-proyecto">
+                </ul>
+                <div class="col-sm-12 col-md-4 col-lg-3 parte2">
+                    <img src="../../../assets/logo_CORONADAS DE GLORIA_2_3.png" class="img-fluid img-proyecto">
+        
+    </div>
+        
+        <div class="col-sm-12 col-md-7 col-lg-7 parte1">
+          <ul>
+            <li><h1>Portfolio Argentina Programa</h1></li>
+            <p>Proyecto realizado para la acreditación del curso de Programación Full Stack Jr de Argentina Programa.</p>
+        </ul>
+        <div class="col-sm-12 col-md-4 col-lg-3 parte2">
+            <img src="../../../assets/APLogo.png" class="img-fluid img-proyecto">
         </div>
     </div>
 </div>
