--- a/src/app/components/logo-ap/logo-ap.component.html
+++ b/src/app/components/logo-ap/logo-ap.component.html
@@ -10,7 +10,7 @@
                 <a href=""><img src="../../../assets/instagram.png" id="Instagram"></a>
                 <a href=""><img src="../../../assets/twitter.png" id="Twitter"></a>
                 <a href=""><img src="../../../assets/facebook.png" id="facebook"></a>
-                <button type="button" class="btn btn-outline-light">INGRESO</button>
+                <button type="button" class="btn btn-outline-light"(click)="login">INGRESO</button>
             </div>            
         </div>
     </div>
